RESOLVED FIXED46798
Assertion failed when accessing -webkit-margin-top-collapse via computed style
https://bugs.webkit.org/show_bug.cgi?id=46798
Summary Assertion failed when accessing -webkit-margin-top-collapse via computed style
Hajime Morrita
Reported 2010-09-29 04:42:40 PDT
This looks to be introduced at http://trac.webkit.org/changeset/68561. Compilers could warn this when disabling SVG.
Attachments
Patch (7.83 KB, patch)
2010-09-29 04:55 PDT, Hajime Morrita
eric: review+
senorblanco: commit-queue-
Hajime Morrita
Comment 1 2010-09-29 04:55:51 PDT
Hajime Morrita
Comment 2 2010-09-29 04:57:32 PDT
Adding CC to notify this regression.
Eric Seidel (no email)
Comment 3 2010-09-29 12:46:36 PDT
Comment on attachment 69178 [details] Patch This is *exactly* why we kill those evil default: statements. Thank you!
Eric Seidel (no email)
Comment 4 2010-09-29 12:46:57 PDT
Comment on attachment 69178 [details] Patch We'll let this commit while you sleep.
Stephen White
Comment 5 2010-09-29 14:59:58 PDT
This is preventing any chromium mac trybots from compiling, so I'm going to land manually.
Stephen White
Comment 6 2010-09-29 15:03:04 PDT
Eric Seidel (no email)
Comment 7 2010-09-29 15:05:32 PDT
Yup. The WebKit tree has been red all afternoon, blocking the commit-queue. You don't actually need to set cq-, the commit-queue bot will figure it out if you have already landed the patch. It checks to make sure the bug is still open before actually trying to land (and if I tried to land double, it would just get a git commit error anyway). Thanks.
Note You need to log in before you can comment on or make changes to this bug.