2010-09-29  MORITA Hajime  <morrita@google.com>

Reviewed by Eric Seidel.

        Assertion failed when accessing -webkit-margin-top-collapse via computed style.
        https://bugs.webkit.org/show_bug.cgi?id=46798

        There was a switch statement which missed enum entries in getPropertyCSSValue().
        This change added these entries to prevent the leak.
        It also added extra case statements to encourage the compiler's help.

        Test: fast/css/getComputedStyle/margin-top-bottom-collapse-alias.html

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
2010-09-29  MORITA Hajime  <morrita@google.com>

        Reviewed by Eric Seidel.

        Assertion failed when accessing -webkit-margin-top-collapse via computed style.
        https://bugs.webkit.org/show_bug.cgi?id=46798

        * fast/css/getComputedStyle/margin-top-bottom-collapse-alias-expected.txt: Added.
        * fast/css/getComputedStyle/margin-top-bottom-collapse-alias.html: Added.
        * fast/css/getComputedStyle/script-tests/margin-top-bottom-collapse-alias.js: Added.


Canonical link: https://commits.webkit.org/59349@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68690 268f45cc-cd09-0410-ab3c-d52691b4dbfc